--- a/src/client-hpo/src/lang/en.json
+++ b/src/client-hpo/src/lang/en.json
@@ -1,4 +1,6 @@
 {
   "hello_world": "Hello world",
-  "hello_world2": "Hello world 2"
+  "upload_error.value_missing": "Virhe: Rivi {row}, solu '{cell}' - Arvo puuttuu.",
+  "upload_error.invalid_format": "Virhe: Rivi {row}, solu '{cell}' - Väärä formatointi arvolla: '{value}'.",
+  "upload_error.value_not_number": "Virhe: Rivi {row}, solu '{cell}' - Arvon: '{value}' täytyy olla numero."
 }
