--- a/src/client-hpo/src/lang/fi.json
+++ b/src/client-hpo/src/lang/fi.json
@@ -1,4 +1,6 @@
 {
-  "hello_world": "Hei maailma",
-  "hello_world2": "Hei maailma 2"
+  "hello_world": "Hello world",
+  "upload_error.value_missing": "Virhe: Rivi {row}, solu '{cell}' - Arvo puuttuu.",
+  "upload_error.invalid_format": "Virhe: Rivi {row}, solu '{cell}' - Väärä formatointi arvolla: '{value}'.",
+  "upload_error.value_not_number": "Virhe: Rivi {row}, solu '{cell}' - Arvon: '{value}' täytyy olla numero."
 }
