--- a/src/client-hpo/src/lang/fi.json
+++ b/src/client-hpo/src/lang/fi.json
@@ -2,5 +2,5 @@
   "hello_world": "Hello world",
   "upload_error.value_missing": "Virhe: Rivi {row}, solu '{cell}' - Arvo puuttuu.",
   "upload_error.invalid_format": "Virhe: Rivi {row}, solu '{cell}' - Väärä formatointi arvolla: '{value}'.",
-  "upload_error.value_not_number": "Virhe: Rivi {row}, solu '{cell}' - Arvon: '{value}' täytyy olla numero."
+  "upload_error.value_not_number": "Virhe: Rivi {row}, solu '{cell}' - Arvon '{value}' täytyy olla numero."
 }
