--- a/src/client-hpo/src/lang/en.json
+++ b/src/client-hpo/src/lang/en.json
@@ -1,6 +1,6 @@
 {
   "hello_world": "Hello world",
-  "upload_error.value_missing": "Virhe: Rivi {row}, solu '{cell}' - Arvo puuttuu.",
-  "upload_error.invalid_format": "Virhe: Rivi {row}, solu '{cell}' - Väärä formatointi arvolla: '{value}'.",
-  "upload_error.value_not_number": "Virhe: Rivi {row}, solu '{cell}' - Arvon: '{value}' täytyy olla numero."
+  "upload_error.value_missing": "Error: Row {row}, cell '{cell}' - Value missing.",
+  "upload_error.invalid_format": "Error: Row {row}, cell '{cell}' - Invalid format for value: '{value}'.",
+  "upload_error.value_not_number": "Error: Row {row}, cell '{cell}' - Value '{value}' has to be a number."
 }
