--- a/src/client-hpo/src/lang/fi.json
+++ b/src/client-hpo/src/lang/fi.json
@@ -1,7 +1,7 @@
 {
   "header_1": "Konserttitiedot",
-  "premiere_tag.premiere": "Ensiesitys maailmalla",
-  "premiere_tag.premiere_in_finland": "Ensiesitys Suomessa",
+  "premiere_tag.premiere": "Maailman kantaesitys",
+  "premiere_tag.premiere_in_finland": "Ensi kertaa Suomessa",
   "premiere_tag.premiere_for_orchestra": "Orkesterin ensiesitys",
   "premiere_tag.premiere_for_arranger_and_orchestra": "Orkesterin ensiesitys sovittajalla",
   "premiere_tag.premiere_for_dance": "Tanssin ensiesitys",
