--- a/src/client-hpo/src/lang/fi.json
+++ b/src/client-hpo/src/lang/fi.json
@@ -1,5 +1,6 @@
 {
   "header_1": "Konserttitiedot",
+  "encore": "Ylimääräinen",
   "premiere_tag.premiere": "Maailman kantaesitys",
   "premiere_tag.premiere_in_finland": "Ensi kertaa Suomessa",
   "premiere_tag.premiere_for_orchestra": "Orkesterin ensiesitys",
