--- a/src/client-hpo/src/lang/fi.json
+++ b/src/client-hpo/src/lang/fi.json
@@ -3,14 +3,14 @@
   "encore": "Ylimääräinen",
   "premiere_tag.premiere": "Maailman kantaesitys",
   "premiere_tag.premiere_in_finland": "Ensi kertaa Suomessa",
-  "premiere_tag.premiere_for_orchestra": "Orkesterin ensiesitys",
-  "premiere_tag.premiere_for_arranger_and_orchestra": "Orkesterin ensiesitys sovittajalla",
-  "premiere_tag.premiere_for_dance": "Tanssin ensiesitys",
-  "premiere_tag.premiere_in_concert": "Ensiesitys konsertissa",
-  "premiere_tag.premiere_in_europe": "Ensiesitys Euroopassa",
-  "premiere_tag.premiere_for_second_version": "Toisen version ensiesitys",
-  "premiere_tag.premiere_for_final_version": "Lopullisen version ensiesitys",
-  "premiere_tag.premiere_for_secondary_lyrics": "Ensiesitys toissijaisella sanoituksella",
+  "premiere_tag.premiere_for_orchestra": "Orkesterin kantaesitys",
+  "premiere_tag.premiere_for_arranger_and_orchestra": "Orkesterin kantaesitys sovittajalla",
+  "premiere_tag.premiere_for_dance": "Tanssiversion ensiesitys",
+  "premiere_tag.premiere_in_concert": "Kantaesitys konsertissa",
+  "premiere_tag.premiere_in_europe": "Kantaesitys Euroopassa",
+  "premiere_tag.premiere_for_second_version": "Toisen version kantaesitys",
+  "premiere_tag.premiere_for_final_version": "Lopullisen version kantaesitys",
+  "premiere_tag.premiere_for_secondary_lyrics": "Kantaesitys toissijaisella sanoituksella",
   "premiere_tag.encore": "Ylimääräinen",
   "search_by_composer": "Hae säveltäjän mukaan",
   "search_concerts": "Hae konsertteja",
