--- a/src/client-hpo/src/lang/fi.json
+++ b/src/client-hpo/src/lang/fi.json
@@ -14,6 +14,8 @@
   "premiere_tag.encore": "Ylimääräinen",
   "search_by_composer": "Hae säveltäjän mukaan",
   "search_concerts": "Hae konsertteja",
+  "search_composer": "Hae säveltäjää",
+  "search_name": "Hae nimeä",
   "upload_error.column_missing": "Virhe: '{value}' - Sarake puuttuu.",
   "upload_error.value_missing": "Virhe: Rivi {row}, solu '{cell}' - Arvo puuttuu.",
   "upload_error.invalid_format": "Virhe: Rivi {row}, solu '{cell}' - Väärä formatointi arvolla: '{value}'.",
