--- a/src/client-hpo/src/lang/fi.json
+++ b/src/client-hpo/src/lang/fi.json
@@ -12,10 +12,12 @@
   "premiere_tag.premiere_for_final_version": "Lopullisen version kantaesitys",
   "premiere_tag.premiere_for_secondary_lyrics": "Kantaesitys toissijaisella sanoituksella",
   "premiere_tag.encore": "Ylimääräinen",
+  "premieres_count": "kantaesitykset: {value}",
   "search_by_composer": "Hae säveltäjän mukaan",
   "search_concerts": "Hae konsertteja",
   "search_composer": "Hae säveltäjää",
   "search_name": "Hae nimeä",
+  "symphonies_count": "teokset: {value}",
   "upload_error.column_missing": "Virhe: '{value}' - Sarake puuttuu.",
   "upload_error.value_missing": "Virhe: Rivi {row}, solu '{cell}' - Arvo puuttuu.",
   "upload_error.invalid_format": "Virhe: Rivi {row}, solu '{cell}' - Väärä formatointi arvolla: '{value}'.",
