--- a/src/client-hpo/src/lang/en.json
+++ b/src/client-hpo/src/lang/en.json
@@ -1,7 +1,34 @@
 {
-  "header_1": "Concerts",
-  "search_by_composer": "Search by composer",
-  "upload_error.value_missing": "Error: Row {row}, cell '{cell}' - Value missing.",
-  "upload_error.invalid_format": "Error: Row {row}, cell '{cell}' - Invalid format for value: '{value}'.",
-  "upload_error.value_not_number": "Error: Row {row}, cell '{cell}' - Value '{value}' has to be a number."
+  "conductor": "Kapellimestari",
+  "conductor_unknown": "Kapellimestari ei tiedossa",
+  "conductors": "Kapellimestarit",
+  "filter_name_search": "Rajaa tuloksia nimellä",
+  "get_back": "Takaisin",
+  "encore": "Ylimääräinen",
+  "header_1": "Konserttitiedot",
+  "premiere_tag.premiere": "Maailman kantaesitys",
+  "premiere_tag.premiere_in_finland": "Ensi kertaa Suomessa",
+  "premiere_tag.premiere_for_orchestra": "Orkesterin kantaesitys",
+  "premiere_tag.premiere_for_arranger_and_orchestra": "Orkesterin kantaesitys sovittajalla",
+  "premiere_tag.premiere_for_dance": "Tanssiversion ensiesitys",
+  "premiere_tag.premiere_in_concert": "Kantaesitys konsertissa",
+  "premiere_tag.premiere_in_europe": "Kantaesitys Euroopassa",
+  "premiere_tag.premiere_for_second_version": "Toisen version kantaesitys",
+  "premiere_tag.premiere_for_final_version": "Lopullisen version kantaesitys",
+  "premiere_tag.premiere_for_secondary_lyrics": "Kantaesitys toissijaisella sanoituksella",
+  "premiere_tag.encore": "Ylimääräinen",
+  "premieres_count": "kantaesitykset: {value}",
+  "premieres_tab": "Kantaesitykset ({value})",
+  "search_by_composer": "Hae säveltäjän mukaan",
+  "search_concerts": "Hae konsertteja",
+  "search_composer": "Hae säveltäjää",
+  "search_conductor": "Hae kapellimestaria",
+  "search_soloist": "Hae solistia",
+  "search_name": "Hae nimeä",
+  "symphonies_count": "teokset: {value}",
+  "symhponies_tab": "Teokset ({value})",
+  "upload_error.column_missing": "Virhe: '{value}' - Sarake puuttuu.",
+  "upload_error.value_missing": "Virhe: Rivi {row}, solu '{cell}' - Arvo puuttuu.",
+  "upload_error.invalid_format": "Virhe: Rivi {row}, solu '{cell}' - Väärä formatointi arvolla: '{value}'.",
+  "upload_error.value_not_number": "Virhe: Rivi {row}, solu '{cell}' - Arvon '{value}' täytyy olla numero."
 }
